--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: "3"
 
 services:
   nginx:
@@ -12,9 +12,4 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - /etc/letsencrypt:/etc/letsencrypt:ro
     network_mode: host
-
-  frontend:
-    image: ghcr.io/skkuding/iris-runner-frontend:latest
-    container_name: iris-runner-frontend
-    ports:
-      - "3000:3000"
+    platform: linux/arm64
